--- a/css-inline.html
+++ b/css-inline.html
@@ -14,8 +14,8 @@
         </div>
     </div>
 
-    <div style="width: 50vw; height: 50%; background-color: rgb(119, 184, 227);">
-        <div style="height: 50vh; width: 50%; background-color: rgb(176, 17, 17);">
+    <div style="width: 50%; height: 50vw; background-color: rgb(119, 184, 227);">
+        <div style="height: 50%; width: 50vw; background-color: rgb(176, 17, 17);">
 
         </div>
     </div>
