--- a/css-interno.html
+++ b/css-interno.html
@@ -22,18 +22,18 @@
             color: #fff;
             background-color: red; 
             font-size: 25px; 
-            font-family: monospace; 
+            font-family: franklin gothic medium; 
             font-weight: bold;
         }
         .div-d{
-            width: 50vw; 
-            height: 50%; 
-            background-color: rgb(119, 184, 227);
+            width: 50%; 
+            height: 50vw; 
+            background-color: rgb(64,224,208);
         }
         .div-e{
-            height: 50vh;
-            width: 50%; 
-            background-color: rgb(176, 17, 17);
+            height: 50%;
+            width: 75vw; 
+            background-color: rgb(0,100,0);
         }
     </style>
 </head>
