--- a/css-interno.html
+++ b/css-interno.html
@@ -9,20 +9,20 @@
             margin: 0;
         }
         .div-a{
-            background-color: #F4A460; 
+            background-color: #ea60f4; 
             width: 500px; 
             height: 500px;
         }
         .div-b{
-            background-color: #3CB371;
+            background-color: #f8b6b6;
             width: 250px; 
             height: 250px;
         }
         .div-b p{
-            color: #fff;
-            background-color: red; 
+            color: #fffb0b;
+            background-color: rgb(126, 5, 70); 
             font-size: 25px; 
-            font-family: franklin gothic medium; 
+            font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif; 
             font-weight: bold;
         }
         .div-d{
